feat: add project registration view options and fix DTO constructors